<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="16dp">

       <TextView
           android:id="@+id/tvTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cadastro_de_objetivo"
           android:textSize="24sp"
           android:textStyle="bold"
           android:layout_marginBottom="16dp"/>

       <EditText
           android:id="@+id/etObjectiveName"
           android:layout_width="match_parent"
           android:layout_height="61dp"
           android:inputType="none"
           android:autofillHints="Criar nome para objetivo"
           android:hint="@string/nome_do_objetivo" />

       <TextView
           android:id="@+id/tvDefPrioridade"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="5dp"
           android:text="@string/definir_priodidade"
           android:textSize="18sp"
           android:textStyle="bold" />

       <RadioGroup
           android:id="@+id/rgPriority"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="5dp">

           <RadioButton
               android:id="@+id/rbHigh"
               android:layout_width="98dp"
               android:layout_height="wrap_content"
               android:text="@string/alta" />

           <RadioButton
               android:id="@+id/rbLow"
               android:layout_width="110dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:text="@string/baixa" />

       </RadioGroup>

       <TextView
           android:id="@+id/tvDefNotificacao"
           android:layout_width="145dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="5dp"
           android:text="@string/notificacoes"
           android:textSize="18sp"
           android:textStyle="bold" />

       <CheckBox
           android:id="@+id/cbNotify"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/notificacaodiaria" />

       <TextView
           android:id="@+id/tvDefCategoria"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="5dp"
           android:text="@string/categoria"
           android:textSize="18sp"
           android:textStyle="bold" />

       <Spinner
           android:id="@+id/spinnerCategory"
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:layout_marginTop="5dp" />

       <LinearLayout
           style="?android:attr/buttonBarStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginTop="24dp">

           <Button
               android:id="@+id/btnLimpa"
               style="?android:attr/buttonBarButtonStyle"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textSize="20dp"
               android:text="@string/limpar" />

           <Button
               android:id="@+id/btnSalva"
               style="?android:attr/buttonBarButtonStyle"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/salvar"
               android:textSize="20dp"
               android:layout_marginStart="16dp"/>

       </LinearLayout>
   </LinearLayout>

</ScrollView>